// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test PathEditPanel should render correctly 1`] = `
<div>
  <div
    class="panel"
    id="pathedit-panel"
  >
    <div
      class="node-type-panel"
    >
      <div
        class="title"
      >
        NODE TYPE
      </div>
      <div
        class="segmented-control"
      >
        <div
          class="seg-item selected"
          title="tCorner"
        >
          <img
            class="seg-item-image"
            src="img/right-panel/icon-nodetype-0.svg"
          />
        </div>
        <div
          class="seg-item"
          title="tSmooth"
        >
          <img
            class="seg-item-image"
            src="img/right-panel/icon-nodetype-1.svg"
          />
        </div>
        <div
          class="seg-item"
          title="tSymmetry"
        >
          <img
            class="seg-item-image"
            src="img/right-panel/icon-nodetype-2.svg"
          />
        </div>
      </div>
      <div
        class="ant-divider css-dev-only-do-not-override-hash ant-divider-horizontal divider"
        role="separator"
      />
      <div
        class="ant-space css-dev-only-do-not-override-hash ant-space-horizontal ant-space-align-center actions"
        style="flex-wrap: wrap; margin-bottom: -8px;"
      >
        <div
          class="ant-space-item"
          style="margin-right: 8px; padding-bottom: 8px;"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-sm"
            disabled=""
            type="button"
          >
            <span
              class="anticon"
              role="img"
              style="margin-right: 0.2em;"
            >
              <svg
                height="1em"
                viewBox="12 12 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  transform="translate(15.227 19.571)"
                >
                  <path
                    d="M.75,8.108,8.714,2.992,16.8,8.108"
                    fill="none"
                    stroke="#969696"
                    stroke-linecap="round"
                    stroke-width="1.5"
                  />
                  <path
                    d="M8.714,5.083a2.092,2.092,0,1,1,2.092-2.092A2.094,2.094,0,0,1,8.714,5.083"
                    fill="#fff"
                  />
                  <path
                    d="M8.714,1.8A1.192,1.192,0,1,0,9.906,2.992,1.194,1.194,0,0,0,8.714,1.8m0-1.8A2.991,2.991,0,1,1,5.722,2.992,2.992,2.992,0,0,1,8.714,0"
                    fill="currentColor"
                  />
                </g>
              </svg>
            </span>
            <span>
              Sharp
            </span>
          </button>
        </div>
        <div
          class="ant-space-item"
          style="margin-right: 8px; padding-bottom: 8px;"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-sm"
            type="button"
          >
            <span
              class="anticon"
              role="img"
              style="margin-right: 0.2em;"
            >
              <svg
                height="1em"
                viewBox="12 12 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  transform="translate(15.227 19.571)"
                >
                  <path
                    d="M.75,8.108A8.964,8.964,0,0,1,8.714,2.992,8.738,8.738,0,0,1,16.8,8.108"
                    fill="none"
                    stroke="#969696"
                    stroke-linecap="round"
                    stroke-width="1.5"
                  />
                  <path
                    d="M8.714,5.083a2.092,2.092,0,1,1,2.092-2.092A2.094,2.094,0,0,1,8.714,5.083"
                    fill="#fff"
                  />
                  <path
                    d="M8.714,1.8A1.192,1.192,0,1,0,9.906,2.992,1.194,1.194,0,0,0,8.714,1.8m0-1.8A2.991,2.991,0,1,1,5.722,2.992,2.992,2.992,0,0,1,8.714,0"
                    fill="currentColor"
                  />
                </g>
              </svg>
            </span>
            <span>
              Round
            </span>
          </button>
        </div>
        <div
          class="ant-space-item"
          style="margin-right: 8px; padding-bottom: 8px;"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-sm"
            disabled=""
            type="button"
          >
            <span
              class="anticon"
              role="img"
              style="margin-right: 0.2em;"
            >
              <svg
                height="1em"
                viewBox="12 12 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  transform="translate(14.365 17.945)"
                >
                  <line
                    fill="none"
                    stroke="#969696"
                    stroke-miterlimit="10"
                    stroke-width="1.5"
                    transform="translate(7.005 2.992)"
                    x1="5.313"
                    y2="6.127"
                  />
                  <line
                    fill="none"
                    stroke="#969696"
                    stroke-linecap="round"
                    stroke-miterlimit="10"
                    stroke-width="1.5"
                    transform="translate(0.75 9.119)"
                    x2="5.241"
                  />
                  <path
                    d="M7.507,11.384A2.264,2.264,0,1,1,9.772,9.12a2.267,2.267,0,0,1-2.265,2.264m0-3.029a.765.765,0,1,0,.765.765.766.766,0,0,0-.765-.765"
                    fill="currentColor"
                  />
                  <line
                    fill="none"
                    stroke="#969696"
                    stroke-linecap="round"
                    stroke-miterlimit="10"
                    stroke-width="1.5"
                    transform="translate(13.243 2.992)"
                    x2="5.278"
                  />
                  <path
                    d="M7.005,11.211A2.092,2.092,0,1,1,9.1,9.119a2.094,2.094,0,0,1-2.092,2.092"
                    fill="#fff"
                  />
                  <path
                    d="M11.765,5.22a2.228,2.228,0,1,1,2.228-2.227A2.231,2.231,0,0,1,11.765,5.22m0-2.956a.728.728,0,1,0,.728.729.73.73,0,0,0-.728-.729"
                    fill="currentColor"
                  />
                  <path
                    d="M7.005,7.928A1.192,1.192,0,1,0,8.2,9.12,1.194,1.194,0,0,0,7.005,7.928m0-1.8A2.992,2.992,0,1,1,4.013,9.12,2.992,2.992,0,0,1,7.005,6.128"
                    fill="currentColor"
                  />
                  <path
                    d="M12.107,5.084A2.092,2.092,0,1,1,14.2,2.992a2.094,2.094,0,0,1-2.092,2.092"
                    fill="#fff"
                  />
                  <path
                    d="M12.107,1.8A1.192,1.192,0,1,0,13.3,2.992,1.194,1.194,0,0,0,12.107,1.8m0-1.8A2.991,2.991,0,1,1,9.115,2.992,2.992,2.992,0,0,1,12.107,0"
                    fill="currentColor"
                  />
                </g>
              </svg>
            </span>
            <span>
              Connect
            </span>
          </button>
        </div>
        <div
          class="ant-space-item"
          style="padding-bottom: 8px;"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-sm"
            type="button"
          >
            <span
              class="anticon"
              role="img"
              style="margin-right: 0.2em;"
            >
              <svg
                height="1em"
                viewBox="12 12 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  transform="translate(11.771 21.009)"
                >
                  <line
                    fill="none"
                    stroke="#969696"
                    stroke-linecap="round"
                    stroke-miterlimit="10"
                    stroke-width="1.5"
                    transform="translate(0.75 2.992)"
                    x2="5.241"
                  />
                  <path
                    d="M7.507,5.256A2.265,2.265,0,1,1,9.772,2.991h0A2.267,2.267,0,0,1,7.507,5.256m0-3.029a.765.765,0,1,0,.765.765.765.765,0,0,0-.765-.765"
                    fill="currentColor"
                  />
                  <line
                    fill="none"
                    stroke="#969696"
                    stroke-linecap="round"
                    stroke-miterlimit="10"
                    stroke-width="1.5"
                    transform="translate(17.43 2.992)"
                    x2="5.278"
                  />
                  <path
                    d="M14.95,5.22a2.228,2.228,0,1,1,2.23-2.227A2.229,2.229,0,0,1,14.95,5.22m0-2.956a.728.728,0,1,0,.728.729.728.728,0,0,0-.728-.729"
                    fill="currentColor"
                    transform="translate(1)"
                  />
                  <path
                    d="M7.005,5.083A2.092,2.092,0,1,1,9.1,2.991,2.092,2.092,0,0,1,7.005,5.083"
                    fill="#fff"
                  />
                  <path
                    d="M7.005,1.8A1.192,1.192,0,1,0,8.2,2.992,1.192,1.192,0,0,0,7.005,1.8m0-1.8A2.991,2.991,0,1,1,4.013,2.992,2.991,2.991,0,0,1,7.005,0"
                    fill="currentColor"
                  />
                  <path
                    d="M15.293,5.083a2.092,2.092,0,1,1,2.092-2.092,2.092,2.092,0,0,1-2.092,2.092"
                    fill="#fff"
                    transform="translate(1)"
                  />
                  <path
                    d="M15.293,1.8a1.192,1.192,0,1,0,1.192,1.192A1.192,1.192,0,0,0,15.293,1.8m0-1.8A2.991,2.991,0,1,1,12.3,2.992,2.991,2.991,0,0,1,15.293,0"
                    fill="currentColor"
                    transform="translate(1)"
                  />
                </g>
              </svg>
            </span>
            <span>
              Disconnect
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test PathEditPanel should render correctly in mobile 1`] = `
<div>
  <div
    class="adm-floating-panel panel panel"
    data-animating="false"
    style="height: 280px; transform: translateY(calc(100% + (-280px)));"
  >
    <div
      class="adm-floating-panel-mask"
      style="display: none;"
    />
    <div
      class="adm-floating-panel-header"
    >
      <div
        class="adm-floating-panel-bar"
      />
    </div>
    <div
      class="adm-floating-panel-content"
    >
      <span
        class="anticon close-icon"
        role="img"
        tabindex="-1"
      >
        <svgr-url
          aria-hidden="true"
          classname=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        />
      </span>
      <div
        class="title"
      >
        Path Edit
      </div>
      <div
        class="scroll-content"
      >
        <div
          class="node-type-panel"
        >
          <div
            class="segmented-control"
          >
            <div
              class="seg-item selected"
              title="tCorner"
            >
              <img
                class="seg-item-image"
                src="img/right-panel/icon-nodetype-0.svg"
              />
            </div>
            <div
              class="seg-item"
              title="tSmooth"
            >
              <img
                class="seg-item-image"
                src="img/right-panel/icon-nodetype-1.svg"
              />
            </div>
            <div
              class="seg-item"
              title="tSymmetry"
            >
              <img
                class="seg-item-image"
                src="img/right-panel/icon-nodetype-2.svg"
              />
            </div>
          </div>
          <div
            class="ant-divider css-dev-only-do-not-override-hash ant-divider-horizontal divider"
            role="separator"
          />
          <div
            class="ant-space css-dev-only-do-not-override-hash ant-space-horizontal ant-space-align-center actions"
            style="flex-wrap: wrap; margin-bottom: -8px;"
          >
            <div
              class="ant-space-item"
              style="margin-right: 8px; padding-bottom: 8px;"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-round ant-btn-default ant-btn-sm ant-btn-block"
                disabled=""
                type="button"
              >
                <span
                  class="anticon"
                  role="img"
                  style="margin-right: 0.2em;"
                >
                  <svg
                    height="1em"
                    viewBox="12 12 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      transform="translate(15.227 19.571)"
                    >
                      <path
                        d="M.75,8.108,8.714,2.992,16.8,8.108"
                        fill="none"
                        stroke="#969696"
                        stroke-linecap="round"
                        stroke-width="1.5"
                      />
                      <path
                        d="M8.714,5.083a2.092,2.092,0,1,1,2.092-2.092A2.094,2.094,0,0,1,8.714,5.083"
                        fill="#fff"
                      />
                      <path
                        d="M8.714,1.8A1.192,1.192,0,1,0,9.906,2.992,1.194,1.194,0,0,0,8.714,1.8m0-1.8A2.991,2.991,0,1,1,5.722,2.992,2.992,2.992,0,0,1,8.714,0"
                        fill="currentColor"
                      />
                    </g>
                  </svg>
                </span>
                <span>
                  Sharp
                </span>
              </button>
            </div>
            <div
              class="ant-space-item"
              style="margin-right: 8px; padding-bottom: 8px;"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-round ant-btn-default ant-btn-sm ant-btn-block"
                type="button"
              >
                <span
                  class="anticon"
                  role="img"
                  style="margin-right: 0.2em;"
                >
                  <svg
                    height="1em"
                    viewBox="12 12 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      transform="translate(15.227 19.571)"
                    >
                      <path
                        d="M.75,8.108A8.964,8.964,0,0,1,8.714,2.992,8.738,8.738,0,0,1,16.8,8.108"
                        fill="none"
                        stroke="#969696"
                        stroke-linecap="round"
                        stroke-width="1.5"
                      />
                      <path
                        d="M8.714,5.083a2.092,2.092,0,1,1,2.092-2.092A2.094,2.094,0,0,1,8.714,5.083"
                        fill="#fff"
                      />
                      <path
                        d="M8.714,1.8A1.192,1.192,0,1,0,9.906,2.992,1.194,1.194,0,0,0,8.714,1.8m0-1.8A2.991,2.991,0,1,1,5.722,2.992,2.992,2.992,0,0,1,8.714,0"
                        fill="currentColor"
                      />
                    </g>
                  </svg>
                </span>
                <span>
                  Round
                </span>
              </button>
            </div>
            <div
              class="ant-space-item"
              style="margin-right: 8px; padding-bottom: 8px;"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-round ant-btn-default ant-btn-sm ant-btn-block"
                disabled=""
                type="button"
              >
                <span
                  class="anticon"
                  role="img"
                  style="margin-right: 0.2em;"
                >
                  <svg
                    height="1em"
                    viewBox="12 12 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      transform="translate(14.365 17.945)"
                    >
                      <line
                        fill="none"
                        stroke="#969696"
                        stroke-miterlimit="10"
                        stroke-width="1.5"
                        transform="translate(7.005 2.992)"
                        x1="5.313"
                        y2="6.127"
                      />
                      <line
                        fill="none"
                        stroke="#969696"
                        stroke-linecap="round"
                        stroke-miterlimit="10"
                        stroke-width="1.5"
                        transform="translate(0.75 9.119)"
                        x2="5.241"
                      />
                      <path
                        d="M7.507,11.384A2.264,2.264,0,1,1,9.772,9.12a2.267,2.267,0,0,1-2.265,2.264m0-3.029a.765.765,0,1,0,.765.765.766.766,0,0,0-.765-.765"
                        fill="currentColor"
                      />
                      <line
                        fill="none"
                        stroke="#969696"
                        stroke-linecap="round"
                        stroke-miterlimit="10"
                        stroke-width="1.5"
                        transform="translate(13.243 2.992)"
                        x2="5.278"
                      />
                      <path
                        d="M7.005,11.211A2.092,2.092,0,1,1,9.1,9.119a2.094,2.094,0,0,1-2.092,2.092"
                        fill="#fff"
                      />
                      <path
                        d="M11.765,5.22a2.228,2.228,0,1,1,2.228-2.227A2.231,2.231,0,0,1,11.765,5.22m0-2.956a.728.728,0,1,0,.728.729.73.73,0,0,0-.728-.729"
                        fill="currentColor"
                      />
                      <path
                        d="M7.005,7.928A1.192,1.192,0,1,0,8.2,9.12,1.194,1.194,0,0,0,7.005,7.928m0-1.8A2.992,2.992,0,1,1,4.013,9.12,2.992,2.992,0,0,1,7.005,6.128"
                        fill="currentColor"
                      />
                      <path
                        d="M12.107,5.084A2.092,2.092,0,1,1,14.2,2.992a2.094,2.094,0,0,1-2.092,2.092"
                        fill="#fff"
                      />
                      <path
                        d="M12.107,1.8A1.192,1.192,0,1,0,13.3,2.992,1.194,1.194,0,0,0,12.107,1.8m0-1.8A2.991,2.991,0,1,1,9.115,2.992,2.992,2.992,0,0,1,12.107,0"
                        fill="currentColor"
                      />
                    </g>
                  </svg>
                </span>
                <span>
                  Connect
                </span>
              </button>
            </div>
            <div
              class="ant-space-item"
              style="margin-right: 8px; padding-bottom: 8px;"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-round ant-btn-default ant-btn-sm ant-btn-block"
                type="button"
              >
                <span
                  class="anticon"
                  role="img"
                  style="margin-right: 0.2em;"
                >
                  <svg
                    height="1em"
                    viewBox="12 12 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      transform="translate(11.771 21.009)"
                    >
                      <line
                        fill="none"
                        stroke="#969696"
                        stroke-linecap="round"
                        stroke-miterlimit="10"
                        stroke-width="1.5"
                        transform="translate(0.75 2.992)"
                        x2="5.241"
                      />
                      <path
                        d="M7.507,5.256A2.265,2.265,0,1,1,9.772,2.991h0A2.267,2.267,0,0,1,7.507,5.256m0-3.029a.765.765,0,1,0,.765.765.765.765,0,0,0-.765-.765"
                        fill="currentColor"
                      />
                      <line
                        fill="none"
                        stroke="#969696"
                        stroke-linecap="round"
                        stroke-miterlimit="10"
                        stroke-width="1.5"
                        transform="translate(17.43 2.992)"
                        x2="5.278"
                      />
                      <path
                        d="M14.95,5.22a2.228,2.228,0,1,1,2.23-2.227A2.229,2.229,0,0,1,14.95,5.22m0-2.956a.728.728,0,1,0,.728.729.728.728,0,0,0-.728-.729"
                        fill="currentColor"
                        transform="translate(1)"
                      />
                      <path
                        d="M7.005,5.083A2.092,2.092,0,1,1,9.1,2.991,2.092,2.092,0,0,1,7.005,5.083"
                        fill="#fff"
                      />
                      <path
                        d="M7.005,1.8A1.192,1.192,0,1,0,8.2,2.992,1.192,1.192,0,0,0,7.005,1.8m0-1.8A2.991,2.991,0,1,1,4.013,2.992,2.991,2.991,0,0,1,7.005,0"
                        fill="currentColor"
                      />
                      <path
                        d="M15.293,5.083a2.092,2.092,0,1,1,2.092-2.092,2.092,2.092,0,0,1-2.092,2.092"
                        fill="#fff"
                        transform="translate(1)"
                      />
                      <path
                        d="M15.293,1.8a1.192,1.192,0,1,0,1.192,1.192A1.192,1.192,0,0,0,15.293,1.8m0-1.8A2.991,2.991,0,1,1,12.3,2.992,2.991,2.991,0,0,1,15.293,0"
                        fill="currentColor"
                        transform="translate(1)"
                      />
                    </g>
                  </svg>
                </span>
                <span>
                  Disconnect
                </span>
              </button>
            </div>
            <div
              class="ant-space-item"
              style="padding-bottom: 8px;"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-round ant-btn-default ant-btn-sm ant-btn-block"
                type="button"
              >
                <span
                  class="anticon"
                  role="img"
                  style="margin-right: 0.2em;"
                >
                  <svg
                    height="1em"
                    viewBox="0 0 32 32"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                    xmlns:xlink="http://www.w3.org/1999/xlink"
                  >
                    <defs>
                      <clippath
                        id="clip-icon-trash"
                      >
                        <rect
                          height="32"
                          width="32"
                        />
                      </clippath>
                    </defs>
                    <g
                      clip-path="url(#clip-icon-trash)"
                      id="icon-trash"
                    >
                      <g
                        data-name="Group 44"
                        id="Group_44"
                        transform="translate(-703.447 -218.136)"
                      >
                        <path
                          d="M727.279,226.981l-4.726-.011v-1.236a1.6,1.6,0,0,0-1.6-1.6h-3.121a1.6,1.6,0,0,0-1.6,1.6v.474c0,.241-.006.544-.013.755l-4.606.016a.671.671,0,0,0-.669.669v.235a.671.671,0,0,0,.669.669h15.664a.67.67,0,0,0,.669-.669v-.236A.671.671,0,0,0,727.279,226.981ZM721,225.891v.883a.187.187,0,0,1-.186.187h-2.748a.187.187,0,0,1-.187-.187v-.883a.187.187,0,0,1,.187-.187h2.748A.187.187,0,0,1,721,225.891Z"
                          data-name="Path 94"
                          fill="currentColor"
                          id="Path_94"
                          transform="translate(0 0)"
                        />
                        <path
                          d="M725.553,228.71l-.591-.052a.439.439,0,0,0-.314.1.416.416,0,0,0-.138.206L723.387,241.5c-.05.792-.415.792-.535.792l-7.1.021c-.4-.031-.445-.7-.446-.717l-1.15-12.506A.429.429,0,0,0,714,228.8a.4.4,0,0,0-.319-.1l-.592.053a.425.425,0,0,0-.293.148.433.433,0,0,0-.1.319l1.156,13.064a1.494,1.494,0,0,0,1.444,1.529l8.045-.034a1.214,1.214,0,0,0,.844-.281,2.02,2.02,0,0,0,.619-1.461l1.137-12.851A.434.434,0,0,0,725.553,228.71Z"
                          data-name="Path 95"
                          fill="currentColor"
                          id="Path_95"
                          transform="translate(0.128 0.329)"
                        />
                        <path
                          d="M717.029,240.539a.536.536,0,0,0,.073,0,.642.642,0,0,0,.567-.711l-1.051-9.251a.643.643,0,1,0-1.278.144l1.05,9.251A.644.644,0,0,0,717.029,240.539Z"
                          data-name="Path 96"
                          fill="currentColor"
                          id="Path_96"
                          transform="translate(0.32 0.427)"
                        />
                        <path
                          d="M719.632,239.895v-9.251a.643.643,0,1,0-1.286,0v9.251a.643.643,0,1,0,1.286,0Z"
                          data-name="Path 97"
                          fill="currentColor"
                          id="Path_97"
                          transform="translate(0.539 0.427)"
                        />
                        <path
                          d="M721.017,240.539a.643.643,0,0,0,.639-.582l.891-9.251a.646.646,0,0,0-.579-.7.653.653,0,0,0-.7.579l-.89,9.251a.645.645,0,0,0,.579.7Z"
                          data-name="Path 98"
                          fill="currentColor"
                          id="Path_98"
                          transform="translate(0.687 0.427)"
                        />
                      </g>
                    </g>
                  </svg>
                </span>
                <span>
                  Delete
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
